<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_phone_num"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c20"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_vpn"
        android:layout_width="wrap_content"
        android:text="Vpn连接"
        android:layout_gravity="right"
        android:layout_height="wrap_content">
    </TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img_unistrong"
            android:layout_width="@dimen/dimen_70"
            android:layout_height="@dimen/dimen_70"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_60"
            android:background="@drawable/logo"
            android:contentDescription="@string/abc_action_bar_home_description" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="视频融合"
            android:textSize="@dimen/textsize_27px"
            android:layout_marginTop="@dimen/dimen_7"
            android:textColor="@color/c666"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_50"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_phone_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_38"
                android:gravity="center_vertical"
                android:text="@string/account"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="@dimen/ts_15px" />

            <com.unistrong.view.EditTextWithDel
                android:id="@+id/et_phone_num"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginLeft="@dimen/dimen_42"
                android:layout_marginRight="@dimen/dimen_42"
                android:background="@color/c20"
                android:hint="@string/input_username"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/color_A3"
                android:textCursorDrawable="@drawable/edit_cursor_color"
                android:textSize="@dimen/ts_17px" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="@dimen/dimen_24"
            android:layout_marginRight="@dimen/dimen_24"
            android:background="@color/c6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_18"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_38"
                android:gravity="center_vertical"
                android:text="@string/password"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="@dimen/ts_15px" />

            <com.unistrong.view.EditTextWithDel
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginLeft="@dimen/dimen_42"
                android:layout_marginRight="@dimen/dimen_42"
                android:background="@color/c20"
                android:hint="@string/user_edit_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/color_A3"
                android:textCursorDrawable="@drawable/edit_cursor_color"
                android:textSize="@dimen/ts_17px" />
        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="@dimen/dimen_24"
            android:layout_marginRight="@dimen/dimen_24"
            android:background="@color/c6" />


        <com.unistrong.view.RippleView
            android:id="@+id/rv_enter"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_44"
            android:layout_marginLeft="@dimen/dimen_35"
            android:layout_marginTop="@dimen/dimen_46"
            android:layout_marginRight="@dimen/dimen_35"
            android:background="@drawable/login_gray">

            <TextView
                android:id="@+id/tv_enter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/c20"
                android:textSize="@dimen/ts_16px" />
        </com.unistrong.view.RippleView>

        <com.unistrong.view.RippleView
            android:id="@+id/rv_setting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_44"
            android:layout_marginLeft="@dimen/dimen_35"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_35"
            android:background="@drawable/login_setting">

            <TextView
                android:id="@+id/tv_setting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="#2674FD"
                android:textSize="@dimen/ts_16px" />
        </com.unistrong.view.RippleView>


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

<!--        <ImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="@dimen/dimen_122"-->
<!--            android:src="@drawable/login_bg" />-->


    </LinearLayout>


</LinearLayout>